[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/gridMerge.gd" type="Script" id=2]

[node name="Main" type="Node2D"]

[node name="ui" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grid" type="Node2D" parent="."]
script = ExtResource( 2 )
width = 8
height = 10
x_start = 32
y_start = 600
offset = 32

[node name="match_timer" type="Timer" parent="."]
one_shot = true

[node name="merge_timer" type="Timer" parent="."]
one_shot = true

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="match_timer" to="grid" method="_on_match_timer_timeout"]
[connection signal="timeout" from="merge_timer" to="grid" method="_on_merge_timer_timeout"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
